# bloop-lang

./: CMakeLists.txt
src/: code.def  main.cpp
src/ast/: ast.cpp  ast.hpp  control.hpp  function.cpp  function.hpp  postfix.hpp
src/bytecode/: build.cpp  build.hpp  defs.hpp  exception.hpp  opcode.def
src/bytecode/compile/: emit.cpp  emit.hpp
src/bytecode/function/: bc_function.cpp  bc_function.hpp
src/bytecode/global/: bc_global.cpp  bc_global.hpp
src/lexer/: exception.hpp  lexer.cpp  lexer.hpp  punctuation.hpp  token.hpp  token_keywords.def
src/parser/: defs.hpp  exception.hpp  parser.cpp  parser.hpp
src/parser/control/: control.cpp
src/parser/control/control_flow/: control_flow.cpp  control_flow.hpp
src/parser/control/for/: for.cpp  for.hpp
src/parser/declaration/: declaration.cpp  declaration.hpp
src/parser/expression/: expression.cpp  expression.hpp  expression_context.hpp  operator.cpp  operator.hpp  sub_expression.cpp  sub_expression.hpp
src/parser/function/: function.cpp  function.hpp
src/parser/operand/: array.cpp  array.hpp  constant.cpp  constant.hpp  identifier.cpp  identifier.hpp  operand.cpp  operand.hpp  parentheses.cpp  parentheses.hpp
src/parser/scope/: scope.cpp  scope.hpp
src/parser/statements/: statement.cpp  statement.hpp
src/resolver/: exception.hpp  resolver.cpp  resolver.hpp
src/utils/: defs.hpp  fmt.hpp
src/vm/: exception.hpp  frame.cpp  interpreter.cpp  operators.cpp  value.cpp  value.hpp  vm.cpp  vm.hpp
src/vm/gc/: gc.cpp  gc.hpp
src/vm/heap/: dvalue.cpp  dvalue.hpp  heap.cpp  heap.hpp  upvalue.cpp
(+20 files in other folders)
